bottom nav started & first button done

--- a/index.html
+++ b/index.html
@@ -28,14 +28,41 @@
     <title>Zoom Call</title>
   </head>
   <body>
-
     <!-- top controls -->
     <div class="top-controls">
-        <ul>
-            <li><button class="sml-grey-btn"><i class="fas fa-th"></i> Speaker View</button></li>
-            <li><button class="sml-grey-btn"><i class="fas fa-expand-arrows-alt"></i></button></li>
-        </ul>
+      <ul class="flex-component">
+        <li>
+          <button class="sml-grey-btn">
+            <i class="fas fa-th"></i> Speaker View
+          </button>
+        </li>
+        <li>
+          <button class="sml-grey-btn">
+            <i class="fas fa-expand-arrows-alt"></i>
+          </button>
+        </li>
+      </ul>
     </div>
     <!-- / top controls -->
+
+    <div class="bottom-controls">
+      <!-- first navigation section -->
+      <nav class="personal-controls-nav">
+        <ul class="flex-component">
+            <!-- first button -->
+            <li class="flex-component">
+                <button>
+                    <i class="fas fa-microphone font-size-26"></i>
+                    <p>Mute</p>
+                </button>
+                <button>
+                    <i class="fas fa-chevron-up"></i>
+                </button>
+            </li>
+            <!-- first button -->
+        </ul>
+      </nav>
+      <!-- first navigation section -->
+    </div>
   </body>
 </html>
