Bottom nav done

--- a/index.html
+++ b/index.html
@@ -45,24 +45,117 @@
     </div>
     <!-- / top controls -->
 
-    <div class="bottom-controls">
+    <!-- bottom controls -->
+    <div class="bottom-controls flex-component">
       <!-- first navigation section -->
-      <nav class="personal-controls-nav">
+      <nav>
         <ul class="flex-component">
-            <!-- first button -->
-            <li class="flex-component">
-                <button>
-                    <i class="fas fa-microphone font-size-26"></i>
-                    <p>Mute</p>
-                </button>
-                <button>
-                    <i class="fas fa-chevron-up"></i>
-                </button>
-            </li>
-            <!-- first button -->
+          <!-- first button -->
+          <li class="flex-component">
+            <button>
+              <i class="fas fa-microphone font-size-24"></i>
+              <h3>Mute</h3>
+            </button>
+            <button>
+              <i class="fas fa-chevron-up"></i>
+            </button>
+          </li>
+          <!-- / first button -->
+          <!-- second button -->
+          <li class="flex-component">
+            <button>
+              <i class="fas fa-video font-size-24"></i>
+              <h3>Stop Video</h3>
+            </button>
+            <button>
+              <i class="fas fa-chevron-up"></i>
+            </button>
+          </li>
+          <!-- second button -->
         </ul>
       </nav>
-      <!-- first navigation section -->
+      <!-- / first navigation section -->
+
+      <!-- second bottom navigation -->
+      <nav class="flex-component central-nav">
+        <ul class="flex-component">
+          <!-- first button -->
+          <li class="flex-component">
+            <button>
+              <i class="fas fa-user-plus font-size-24"></i>
+              <h3>Invite</h3>
+            </button>
+          </li>
+          <!-- / first button -->
+          <!-- second button -->
+          <li class="flex-component">
+            <button>
+              <i class="fas fa-user-friends font-size-24"></i>
+              <h3>Manage Participants</h3>
+            </button>
+          </li>
+          <!-- second button -->
+          <!-- third button -->
+          <li class="flex-component">
+            <button>
+              <i class="fas fa-chart-bar font-size-24"></i>
+              <h3>Polling</h3>
+            </button>
+          </li>
+          <!-- / third button -->
+          <!-- fourth button -->
+          <li class="flex-component">
+            <button>
+              <i class="fas fa-share-square font-size-24"></i>
+              <h3>Share Screen</h3>
+            </button>
+            <button>
+              <i class="fas fa-chevron-up"></i>
+            </button>
+          </li>
+          <!-- / fourth button -->
+          <!-- fifth button -->
+          <li class="flex-component">
+            <button>
+              <i class="fas fa-comment font-size-24"></i>
+              <h3>Chat</h3>
+            </button>
+          </li>
+          <!-- / fifth button -->
+          <!-- sixth button -->
+          <li class="flex-component">
+            <button>
+              <i class="fas fa-record-vinyl font-size-24"></i>
+              <h3>Record</h3>
+            </button>
+          </li>
+          <!-- / sixth button -->
+          <!-- seventh button -->
+          <li class="flex-component">
+            <button>
+              <i class="fas fa-th-large font-size-24"></i>
+              <h3>Breakout Rooms</h3>
+            </button>
+          </li>
+          <!-- / seventh button -->
+          <!-- eighth button -->
+          <li class="flex-component">
+            <button>
+              <i class="fas fa-ellipsis-h font-size-24"></i>
+              <h3>More</h3>
+            </button>
+          </li>
+          <!-- / eighth button -->
+        </ul>
+      </nav>
+      <!-- / second bottom navigation -->
+
+      <!-- leave button -->
+      <div class="flex-component end-btn">
+        <button><h3>End Meeting</h3></button>
+      </div>
+      <!-- / leave button -->
     </div>
+     <!-- bottom controls -->
   </body>
 </html>
