--- a/index.html
+++ b/index.html
@@ -45,213 +45,253 @@
     </div>
     <!-- / top controls -->
 
-
-    <main class="flex-component"  >
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=28" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+    <main class="flex-component">
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=28" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=27" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=27" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=26" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=26" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=25" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=25" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=24" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=24" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=23" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=23" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=22" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=22" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=21" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=21" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=20" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=20" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=19" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=19" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=18" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=18" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=17" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=17" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=16" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=16" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=15" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=15" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=14" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=14" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=13" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=13" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=12" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=12" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=11" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=11" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=10" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=10" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=9" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=9" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=8" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=8" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=7" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=7" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=6" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=6" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=5" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=5" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=4" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=4" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=3" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=3" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=2" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=2" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
         </div>
-        <div class="user-cam-wrapper">
-            <img src="https://picsum.photos/300/200?random=1" alt="cam img">
-            <div class="user-name">
-                <i class="fas fa-microphone-slash"></i>
-                <h2> Pinko Pallo</h2>
-            </div>
-        </div>   
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=1" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
+        </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=35" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
+        </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=34" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
+        </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=33" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
+        </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=32" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
+        </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=31" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
+        </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=30" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
+        </div>
+      </div>
+      <div class="user-cam-wrapper">
+        <img src="https://picsum.photos/300/200?random=29" alt="cam img" />
+        <div class="user-name">
+          <i class="fas fa-microphone-slash"></i>
+          <h2>Pinko Pallo</h2>
+        </div>
+      </div>
     </main>
-
-
-
-
-
-
-
-
 
     <!-- bottom controls -->
     <div class="bottom-controls flex-component">
@@ -364,6 +404,6 @@
       </div>
       <!-- / leave button -->
     </div>
-     <!-- bottom controls -->
+    <!-- bottom controls -->
   </body>
 </html>
