--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@
         <ul class="flex-component">
           <!-- first button -->
           <li class="flex-component">
-            <button>
+            <button class="flex-component column">
               <i class="fas fa-microphone font-size-24"></i>
-              <h3>Mute</h3>
+              Mute
             </button>
             <button>
               <i class="fas fa-chevron-up"></i>
@@ -311,9 +311,9 @@
           <!-- / first button -->
           <!-- second button -->
           <li class="flex-component">
-            <button>
+            <button class="flex-component column">
               <i class="fas fa-video font-size-24"></i>
-              <h3>Stop Video</h3>
+              Stop Video
             </button>
             <button>
               <i class="fas fa-chevron-up"></i>
@@ -329,68 +329,68 @@
         <ul class="flex-component">
           <!-- first button -->
           <li class="flex-component">
-            <button>
+            <button class="flex-component column">
               <i class="fas fa-user-plus font-size-24"></i>
-              <h3>Invite</h3>
+              Invite
             </button>
           </li>
           <!-- / first button -->
           <!-- second button -->
           <li class="flex-component">
-            <button>
+            <button class="flex-component column">
               <i class="fas fa-user-friends font-size-24"></i>
-              <h3>Manage Participants</h3>
+              Manage Participants
             </button>
           </li>
           <!-- second button -->
           <!-- third button -->
           <li class="flex-component">
-            <button>
+            <button class="flex-component column">
               <i class="fas fa-chart-bar font-size-24"></i>
-              <h3>Polling</h3>
+              Polling
             </button>
           </li>
           <!-- / third button -->
           <!-- fourth button -->
           <li class="flex-component">
-            <button>
+            <button class="flex-component column">
               <i class="fas fa-share-square font-size-24"></i>
-              <h3>Share Screen</h3>
+              Share Screen
             </button>
-            <button>
+            <button class="flex-component column">
               <i class="fas fa-chevron-up"></i>
             </button>
           </li>
           <!-- / fourth button -->
           <!-- fifth button -->
           <li class="flex-component">
-            <button>
+            <button class="flex-component column">
               <i class="fas fa-comment font-size-24"></i>
-              <h3>Chat</h3>
+              Chat
             </button>
           </li>
           <!-- / fifth button -->
           <!-- sixth button -->
           <li class="flex-component">
-            <button>
+            <button class="flex-component column">
               <i class="fas fa-record-vinyl font-size-24"></i>
-              <h3>Record</h3>
+              Record
             </button>
           </li>
           <!-- / sixth button -->
           <!-- seventh button -->
           <li class="flex-component">
-            <button>
+            <button class="flex-component column">
               <i class="fas fa-th-large font-size-24"></i>
-              <h3>Breakout Rooms</h3>
+              Breakout Rooms
             </button>
           </li>
           <!-- / seventh button -->
           <!-- eighth button -->
           <li class="flex-component">
-            <button>
+            <button class="flex-component column">
               <i class="fas fa-ellipsis-h font-size-24"></i>
-              <h3>More</h3>
+              More
             </button>
           </li>
           <!-- / eighth button -->
@@ -400,7 +400,7 @@
 
       <!-- leave button -->
       <div class="flex-component end-btn">
-        <button><h3>End Meeting</h3></button>
+        <button>End Meeting</button>
       </div>
       <!-- / leave button -->
     </div>
