--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
               <i class="fas fa-share-square font-size-24"></i>
               Share Screen
             </button>
-            <button class="flex-component column">
+            <button>
               <i class="fas fa-chevron-up"></i>
             </button>
           </li>
