some media queries added

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
       <nav class="flex-component central-nav">
         <ul class="flex-component">
           <!-- first button -->
-          <li class="flex-component">
+          <li class="flex-component" id="invite-btn">
             <button class="flex-component column">
               <i class="fas fa-user-plus font-size-24"></i>
               Invite
@@ -379,7 +379,7 @@
           </li>
           <!-- / sixth button -->
           <!-- seventh button -->
-          <li class="flex-component">
+          <li class="flex-component" id="breakout">
             <button class="flex-component column">
               <i class="fas fa-th-large font-size-24"></i>
               Breakout Rooms
@@ -387,7 +387,7 @@
           </li>
           <!-- / seventh button -->
           <!-- eighth button -->
-          <li class="flex-component">
+          <li class="flex-component small-screen">
             <button class="flex-component column">
               <i class="fas fa-ellipsis-h font-size-24"></i>
               More
